--- a/Module/書名/styles.css
+++ b/Module/書名/styles.css
@@ -4,7 +4,14 @@
 .pin1ming4,
 .syu1ming4 {
   font-style: normal;
-  display: inline-flex;
+}
+.pin1ming4 .zit3,
+.syu1ming4 .zit3 {
+  display: inline-block;
+}
+.pin1ming4 .zit3 > .zit3,
+.syu1ming4 .zit3 > .zit3 {
+  display: flex;
 }
 .pin1ming4 .hoi1,
 .pin1ming4 .fan1gaak3,
@@ -14,6 +21,7 @@
 .syu1ming4 .saan1 {
 	width: 0;
 	height: 0;
+	font-size: 0.1px;
 	color: transparent;
 }
 .pin1ming4 + .pin1ming4,
@@ -49,4 +57,3 @@
 	display: inline-block;
 	margin-right: -0.4em;
 }
-
